[package]
name = "aquarium"
version = "0.1.2"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"

[[bin]]
name = "aquarium"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["std", "serde"] }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1.10"
rss = "2.0"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
slug = "0.1.4"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.3"

[dev-dependencies]
temp_testdir = "0.2"
